// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PanelRow should render with the custom class name 1`] = `
<div>
  <div
    class="components-panel__row custom"
  />
</div>
`;

exports[`PanelRow should render with the default class name 1`] = `
<div>
  <div
    class="components-panel__row"
  />
</div>
`;
